# scifio-spacing-test

./: CMakeLists.txt  reader.cpp  writer.cpp
